CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (rtttl-tests)

SET (PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
SET (THIRDPARTY_DIR ${PROJECT_DIR}/thirdparty)

ADD_SUBDIRECTORY (${THIRDPARTY_DIR}/googletest ${CMAKE_BINARY_DIR}/googletest)

SET (MAIN_SRC_DIR ${PROJECT_DIR})
SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/)
SET (SOURCES
        ${SRC_DIR}/tests.cpp
        ${SRC_DIR}/NoteTest.cpp
        ${SRC_DIR}/RtttlParserTest.cpp
        ${MAIN_SRC_DIR}/SimpleAudioNote.cpp
        ${MAIN_SRC_DIR}/RtttlParser.cpp
    )

IF (MSVC)
    STRING (REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
    STRING (REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
ENDIF ()

ADD_EXECUTABLE (tests ${SOURCES})
TARGET_INCLUDE_DIRECTORIES (tests PRIVATE ${MAIN_SRC_DIR})
TARGET_LINK_LIBRARIES (tests gtest)
